--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js CLI script which writes .env files or export commands to stdout based on values held in AWS Parameter Store and/or AWS Secrets Manager",
   "bin": "./aws-secrets-to-env.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "tidy": "standard --fix"
   },
   "repository": {
     "type": "git",
