fixed #2: removed .? operator; added engines field to node

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv",
     "env"
   ],
+  "engines" : { "node" : ">=8.0" },
   "author": "phhu.git@gmail.com",
   "license": "ISC",
   "bugs": {
